--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'/>
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -75,7 +76,7 @@
         margin-top: 1000px;
         margin-left: 722px;
       }
-      .body {
+      body {
     font-family: 'Aladin';font-size: 22px;
 }
 
