--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'/>
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,8 +16,6 @@
       background-size: cover;
       background-position: inherit;
       background-attachment: fixed;
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
     }
     td,
     tr,
