--- a/science_notes.html
+++ b/science_notes.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'/>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
