--- a/subjects.html
+++ b/subjects.html
@@ -31,6 +31,7 @@
         border-radius: 10px;
         font-size: xx-large;
         transition: 0.3s;
+        margin-top: 20px;
       }
       .subject :hover {
         width: 215px;
@@ -39,6 +40,7 @@
         cursor: pointer;
       }
       .subsci {
+        margin-top: 20px;
         width: 200px;
         height: 200px;
         background-color: rgb(43, 197, 217);
