--- a/contact_us.html
+++ b/contact_us.html
@@ -3,12 +3,25 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
     <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'/>
-    <link rel="icon" type="image/x-icon" href="download.jpeg" />
+    <link rel="icon" type="image/x-icon" href="favicon-32×32.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
     <style>
+      body {
+
+        background-image: url(download.jpeg);
+
+        background-repeat: no-repeat;
+
+        background-size: cover;
+
+        background-position: inherit;
+
+        background-attachment: fixed;
+
+      }
       .emailvishnu {
         cursor: pointer;
         width: 136px;
