--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
     <style>
       body {
 
-        background-image: url(download.jpeg);
+        background-image: url(R.jpeg);
 
         background-repeat: no-repeat;
 
