--- a/maths_notes.html
+++ b/maths_notes.html
@@ -86,6 +86,7 @@ border: 2px solid red;
         transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
         text-align: center;
+        position: absolute;
       }
       .container:hover .image {
         opacity: 0.3;
@@ -197,7 +198,17 @@ border: 2px solid red;
           <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mybutton"> Chapter 6 download </button></a>
         </div>
       </div>
+    <p>chapter 7 <br>
+    </br>cube and cube roots</p>
+    </div>
+    <div class="container">
+      <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
+      <div class="middle">
+        <div class="text">
+          <a class="mathsn" href="ncert-class-8-solution-dec30-for-maths-chapter-7.pdf" target="_blank"><button class="mybutton"> Chapter 7 download </button></a>
+        </div>
       </div>
+    </div>
     </p>
     <script src="scripts.js"></script>
 </body>
