--- a/geo.html
+++ b/geo.html
@@ -94,6 +94,8 @@
     </nav>
   <h1 id="centre"> geography notes </h1>
   <a id="centre" href="g1.pdf"><button class="gn">chapter 1</button></a>
+  <br>
+  <a id="centre" href="g2.pdf"><button class="gn">chapter 2</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
